--- a/learning_logs/templates/learning_logs/edit_entry.html
+++ b/learning_logs/templates/learning_logs/edit_entry.html
@@ -1,11 +1,22 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+<h4>Edit entry:</h4>
+{% endblock header %}
 
 {% block content %}
-<p><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></p>
-<p>Edit entry:</p>
-<form action="{% url 'learning_logs:edit_entry' entry.id %}" method="post">
-    {% csrf_token %}
-    {{form.as_p}}
-    <button name="submit">Save</button>
-</form>
+<div class="row">
+    <div class="col-md-offset-3 col-md-6 col-sm-offset-1 col-sm-10 col-xs-offset-1 col-xs-10">
+        <h4><a href="{% url 'learning_logs:topic' topic.id %}">{{topic}}</a></h4>
+        <form action="{% url 'learning_logs:edit_entry' entry.id %}" method="post">
+            {% csrf_token %}
+            {% bootstrap_form form %}
+
+            {% buttons %}
+            <button class="btn btn-primary" name="submit">Save</button>
+            {% endbuttons %}
+        </form>
+    </div>
+</div>
 {% endblock content %}
