--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,17 +1,23 @@
 {% extends "learning_logs/base.html" %}
+{% load bootstrap3 %}
+
+{% block header %}
+<h2>Log in to your account.</h2>
+{% endblock header %}
 
 {% block content %}
+<div class="row">
+    <div class="col-md-offset-4 col-md-4 col-sm-offset-3 col-sm-6 col-xs-offset-3 col-xs-6">
+        <form method="post" action="{% url 'users:login' %}" class="form">
+            {% csrf_token %}
+            {% bootstrap_form form %}
 
-{% if form.errors %}
-<p>Your username and did not match. Please try again.</p>
-{% endif %}
-
-<form method="post" action="{% url 'users:login' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-
-    <button name="submit">Log in</button>
-    <input type="hidden" name="next" value="{% url 'learning_logs:index' %}" />
-</form>
+            {% buttons %}
+            <button class="btn btn-primary" name="submit">Log in</button>
+            {% endbuttons %}
+            <input type="hidden" name="next" value="{% url 'learning_logs:index' %}"/>
+        </form>
+    </div>
+</div>
 
 {% endblock content %}
